--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Pixel Perfect | Web Design Agency</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+
+    <link rel="stylesheet" href="portfolio-styles.css">
+    <script src="portfolio.js" defer></script>
 </head>
 <body>
     <div class="cursor-follower"></div>
